Compilation error with -Wunsafe-buffer-usage-in-format-attr-call when using latest Swift toolchain https://bugs.webkit.org/show_bug.cgi?id=306542

Reviewed by David Kilzer.

Suppress the unsafe-buffer-usage-in-format-attr-call warning in SystemTracingCocoa.cpp by adding
-Wunsafe-buffer-usage-in-format-attr-call to the list of warnings to suppress in
WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN and deploying that macro in the cpp file.

No new tests since there should be no behavioral changes.

* Source/WTF/wtf/Assertions.h:
* Source/WTF/wtf/Compiler.h:
* Source/WTF/wtf/Logger.h:
(WTF::Logger::log):
(WTF::Logger::logVerbose):
* Source/WTF/wtf/StatisticsManager.cpp:
(WTF::StatisticsManager::dumpStatistics):
* Source/WTF/wtf/SystemTracing.h:
* Source/WTF/wtf/cocoa/SystemTracingCocoa.cpp:
* Source/WTF/wtf/darwin/LibraryPathDiagnostics.mm:
(WTF::LibraryPathDiagnosticsLogger::logJSONPayload):
(WTF::LibraryPathDiagnosticsLogger::logError):
(WTF::LibraryPathDiagnosticsLogger::logDynamicLibraryInfo):
* Source/WebCore/contentextensions/ContentExtensionCompiler.cpp:
(WebCore::ContentExtensions::compileRuleList):
* Source/WebCore/platform/graphics/cv/PixelBufferConformerCV.cpp:
(WebCore::logStackTrace):
* Source/WebCore/platform/mac/ScrollingEffectsController.mm:
(WebCore::ScrollingEffectsController::handleWheelEvent):
* Source/WebCore/xml/XSLTUnicodeSort.cpp:
(WebCore::xsltUnicodeSortFunction):
* Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::warningHandler):
(WebCore::fatalErrorHandler):
(WebCore::normalErrorHandler):
* Source/WebKit/Scripts/generate-derived-log-sources.py:
(generate_message_receiver_implementations_file):
* Source/WebKit/Shared/Extensions/WebExtensionUtilities.cpp:
(WebKit::toErrorString):
* Source/WebKit/Shared/LogStream.cpp:
(WebKit::LogStream::logOnBehalfOfWebContent):
* Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::WebProcessXPCEventHandler::handleXPCEvent):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldUseMouseGestureRecognizer]):

Canonical link: https://commits.webkit.org/306552@main