Source/WebKit/Shared/LogStream.cpp
@@ -102,7 +102,9 @@ void LogStream::logOnBehalfOfWebContent(std::span<const uint8_t> logSubsystem, s
 
     // Use '%{public}s' in the format string for the preprocessed string from the WebContent process.
     // This should not reveal any redacted information in the string, since it has already been composed in the WebContent process.
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN
     os_log_with_type(osLogPointer, static_cast<os_log_type_t>(logType), "WebContent[%d] %{public}s", m_pid, byteCast<char>(nullTerminatedLogString).data());
+WTF_ALLOW_UNSAFE_BUFFER_USAGE_END
 }
 
 #if ENABLE(STREAMING_IPC_IN_LOG_FORWARDING)
